--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 
 .container {
     background: #ffeeff;
-    width: 300px; /* Размер для десктопной версии */
-    height: 400px; /* Размер для десктопной версии */
+    width: 300px;
+    height: 400px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 12px 12px 15px #474747,
@@ -81,29 +81,4 @@ button[onclick="clearAll()"],
 button[onclick="backSpace()"],
 button[onclick="equal()"] {
     background: #ff5a45 !important;
-}
-
-
-@media (max-width: 768px) {
-    .container {
-        width: 90%;
-        max-width: 400px;
-        height: 80vh;
-        padding: 10px;
-    }
-
-    .display #screen {
-        height: 15vh;
-        font-size: 8vh;
-        width: 95%;
-    }
-
-    .buttons {
-        height: 60vh;
-    }
-
-    .buttons .row button {
-        height: 10vh;
-        font-size: 5vh;
-    }
 }
